Fixed link to fonts and small screen spacing

--- a/style/css/style.css
+++ b/style/css/style.css
@@ -10,8 +10,8 @@ html {
   /* IBM PLEX SANS */
   @font-face {
     font-family: 'IBM Plex Sans';
-    src: url('/style/webfontkit/ibmplexsans-regular-webfont.ttf') format('ttf'),
-      url('/style/webfontkit/ibmplexsans-regular-webfont.woff') format('woff');
+    src: url('/style/fonts/ibmplexsans-regular-webfont.ttf') format('ttf'),
+      url('/style/fonts/ibmplexsans-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
   }
@@ -20,8 +20,8 @@ html {
   @font-face { 
     font-family: 'IBM Plex Sans'; 
     font-weight: bold; 
-    src: url('/style/webfontkit/ibmplexsans-bold-webfont.ttf') format('ttf'),
-    url('/style/webfontkit/ibmplexsans-bold-webfont.woff') format('woff');
+    src: url('/style/fonts/ibmplexsans-bold-webfont.ttf') format('ttf'),
+    url('/style/fonts/ibmplexsans-bold-webfont.woff') format('woff');
   }
 
   body {
@@ -47,9 +47,10 @@ html {
     bottom: 22vh;
 
     font-family: 'IBM Plex Sans';
-    font-size: 80px;
+    font-size: 6.5vw;
     font-weight: bold;
     line-height: 1;
+    text-align: right;
     margin: 0 0 10px -4px;
   
     color: #000000;
@@ -61,7 +62,7 @@ html {
     bottom: 12vh;
   
     font-family: 'IBM Plex Sans';
-    font-size: 50px;
+    font-size: 5vw;
     font-weight: bold;
     line-height: 1;
     margin: 0 0 10px -4px;
@@ -69,14 +70,7 @@ html {
   
     color: #75B4C2;
   }
-  
-  .portrait{
-    position: absolute;
-    width: 3vw;
-    height: 3vw;
-    left: 20vw;
-    top: 30vh;
-  }
+
   img{
     position: absolute;
     width: 50vw;
@@ -127,7 +121,7 @@ html {
     top: 15px;
     font-style: normal;
     font-weight: bold;
-    font-size: 53px;
+    font-size: 60px;
     line-height: 5vw;
     color: black;
     text-decoration: underline;
@@ -140,7 +134,7 @@ html {
     padding: 17px;
     text-align: justify;
     margin: 17px;
-    margin-top: 40px;
+    margin-top: 4.5vw;
     line-height: 2vw;
   }
   
@@ -156,7 +150,7 @@ html {
     width: 100%;
     height: 10px;
     font-style: normal;
-    font-size: 4vw;
+    font-size: 50px;
     color: black;
     line-height: 6vw;
     padding: 30px;
@@ -176,9 +170,23 @@ html {
     .header-right {
       float: none;
     }
-    .home-name{
-      font-size: 20vw;
-      margin-left: 0;
-      text-align: right;
+    h1{
+      font-size: 15vw;
+      text-align: center;
+    }
+    h2{
+
+      font-size:10vw;
+      text-align: left;
+    }
+    img{
+      position: absolute;
+      width: 300px;
+      height: 300px;
+      margin-top: -150px;
+      margin-left: -150px;
+      left: 50%;
+      top: 50%;
+      z-index: -1;
     }
   }
